@@ -9,7 +9,7 @@ the mocke server will start at port 1080
 
 # How bring the service up
 ./mvnw clean install -DskipTests  
-java -jar target/simple-springboot-app-0.0.1-SNAPSHOT.jar  
+java --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.lang.invoke=ALL-UNNAMED -jar target/simple-springboot-app-0.0.1-SNAPSHOT.jar
 The server will start at port 9001
 
 # How to run the tests
